--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,3 +1,5 @@
+@import "header" , "footer";
+
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
 
 * {
@@ -140,18 +142,3 @@ body main section button {
   transition: all 1s;
 }
 
-footer {
-  background-color: rgb(180, 34, 180);
-  font-size: 10px;
-  margin: 5px;
-  border: 2px salmon solid;
-  padding: 5px;
-  text-align: center;
-  font-family: 'Courier New', Courier, monospace;
-  grid-area: footer;
-
-  a {
-    display: inline-block;
-    margin: 0.5rem;
-  }
-}
