arreglos en el estilo

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,4 +1,4 @@
-@import "header" , "footer";
+@import "header" , "footer" , "main";
 
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
 
@@ -11,134 +11,9 @@ body {
   font-family: 'Lora', serif;
 }
 
-/* HEADER */
-
-a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: rgb(236, 97, 236);
-  margin-left: 10px;
-  display: inline;
-}
-
-header {
-  background-color: rgb(180, 34, 180);
-  margin: 5px;
-  border: 2px salmon solid;
-  padding: 5px;
-  text-align: center;
-  font-family: 'Courier New', Courier, monospace;
-  grid-area: header;
-}
-
-h1 {
-  text-align: center;
-  color: rgb(226, 43, 226);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  text-shadow: 4px 3px #41463d;
-}
-
-@keyframes marca {
-  0% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 50%;
-  }
-
-  100% {
-    opacity: 100%;
-  }
-}
-
-.marca {
-  animation-name: marca;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-delay: 5s;
-}
-
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: sticky;
-  top: 0;
-  grid-area: nav;
-}
 
 li {
   list-style-type: none;
   display: inline-block;
-}
-
-.politicas {
-  list-style-type: circle;
-  text-align: start;
-}
-
-main {
-  background-color: rgb(250, 215, 244);
-  margin: 5px;
-  border: 2px solid violet;
-  padding: 15px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-h2 {
-  text-align: center;
-}
-
-.parrafo {
-  text-align: justify;
-  font-size: 20px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.nosotros {
-  width: 12.5rem;
-  height: 12.5rem;
-  filter: grayscale(70%);
-
-  &:hover {
-    filter: grayscale(0%);
-    width: 15.6rem;
-    height: 15.6rem;
-    transition: all 2s;
-  }
-}
-
-body main section {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-
-  img {
-    width: 20rem;
-    border-radius: 4px;
-    filter: grayscale(70%);
-  }
-}
-
-img:hover {
-  filter: grayscale(0%);
-}
-
-body main section button {
-  border-radius: 5px;
-  background-color: #ec9cf6;
-  width: 5rem;
-  height: 1.5rem;
-  cursor: pointer;
-  box-shadow: 5px 5px 7px 0px rgba(0, 0, 0, 0.75);
-}
-
-.button:hover {
-  background-color: #d08ada;
-  width: 5.5rem;
-  height: 1.55rem;
-  transition: all 1s;
 }
 
