--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,37 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
-footer {
-  background-color: rgb(180, 34, 180);
-  font-size: 10px;
-  margin: 5px;
-  border: 2px salmon solid;
-  padding: 5px;
-  text-align: center;
-  font-family: "Courier New", Courier, monospace;
-  grid-area: footer;
-}
-footer a {
-  display: inline-block;
-  margin: 0.5rem;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: "Lora", serif;
-}
-
 /* HEADER */
-a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: rgb(236, 97, 236);
-  margin-left: 10px;
-  display: inline;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap");
 header {
   background-color: rgb(180, 34, 180);
   margin: 5px;
@@ -76,16 +44,26 @@ nav {
   grid-area: nav;
 }
 
-li {
-  list-style-type: none;
+footer {
+  background-color: rgb(180, 34, 180);
+  margin: 5px;
+  border: 2px salmon solid;
+  padding: 5px;
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;
+  grid-area: footer;
+}
+footer a {
   display: inline-block;
+  text-decoration: none;
+  font-size: 1rem;
+  margin: 0.5rem;
+}
+footer h3 {
+  font-size: 1.3rem;
 }
 
-.politicas {
-  list-style-type: circle;
-  text-align: start;
-}
-
+/*Todas las paginas*/
 main {
   background-color: rgb(250, 215, 244);
   margin: 5px;
@@ -98,13 +76,9 @@ h2 {
   text-align: center;
 }
 
-.parrafo {
-  text-align: justify;
-  font-size: 20px;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-}
-
+/*Inicio*/
 .nosotros {
+  align-items: center;
   width: 12.5rem;
   height: 12.5rem;
   filter: grayscale(70%);
@@ -116,6 +90,13 @@ h2 {
   transition: all 2s;
 }
 
+.parrafo {
+  text-align: justify;
+  font-size: 20px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+/*Productos*/
 body main section {
   display: flex;
   flex-direction: column;
@@ -146,6 +127,36 @@ body main section button {
   width: 5.5rem;
   height: 1.55rem;
   transition: all 1s;
+}
+
+/*Contacto*/
+form input {
+  border-radius: 5px;
+  background-color: #ec9cf6;
+  width: 5rem;
+  height: 1.5rem;
+  cursor: pointer;
+  box-shadow: 5px 5px 7px 0px rgba(0, 0, 0, 0.75);
+}
+
+form textarea {
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 5px 5px 7px 0px rgba(0, 0, 0, 0.75);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Lora", serif;
+}
+
+li {
+  list-style-type: none;
+  display: inline-block;
 }
 
 /*# sourceMappingURL=estilo.css.map */
